src/app/app.component.scss
::ng-deep body,
::ng-deep html {
  width: 100%;
  height: 100%;
  margin: 0px;
  padding: 0px;
  overflow-x: hidden;
  overflow-y: hidden;
  position: relative;
  --content-color: var(--b3);
  --text-color: var(--b3);
  --text-outline: var(--w4);
  --background-color: var(--w5);
}

@property --c1 {
  syntax: "<color>";
  inherits: false;
  initial-value: #ffffff;
}

@property --c2 {
  syntax: "<color>";
  inherits: false;
  initial-value: #ffffff;
}

.main{
  background-color: var(--background-color);
  z-index: 0;
}

.content {
  z-index: 1;
  position: relative;
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: row;
}

.tilesHolder {
  z-index: -1;
  position: fixed;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: calc(100% + var(--tile-size));
  top: calc(var(--tile-size) / -4);
  left: calc(var(--tile-size) / -4);
}

#landingPage {
  z-index: 2;
  position: relative;
  margin-left: -5vw;
  margin-top: -5vh;
  width: 110vw;
  height: 110vh;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: --c1 1s, --c2 4s;
  //background: radial-gradient(var(--c1), var(--c2));
  #cover {
    width: 100%;
    height: 100%;
    left: 0px;
    top: 0px;
    position: fixed;
    opacity: 80%;
    background-color: var(--b3);
    transition: background-color 1.5s, opacity 1.5s, --c3 1s, --c4 4s;
  }

  &.invisible{
    --c1: #ffffff00;
    --c2: #ffffff00;
    #cover {
      //background-color: #00000000;
      opacity: 0%;
    }
  }
}

#title {
  z-index: 0;
  display: flex;
  flex-direction: column;
  padding: 2px 40px;
  width: fit-content;
  align-items: center;
  justify-content: center;
  border-radius: 100px;
  transition: opacity 1.5s;
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  h1 {
    font-size: 8vw;
    color: var(--text-color);
  }
  p {
    font-size: 3vw;
    color: var(--text-color);
  }
}

.pxOutline {
  text-shadow:   
  /* first layer at 1px */ -1px -1px 0px var(--text-outline),
    0px -1px 0px var(--text-outline), 1px -1px 0px var(--text-outline),
    -1px 0px 0px var(--text-outline), 1px 0px 0px var(--text-outline),
    -1px 1px 0px var(--text-outline), 0px 1px 0px var(--text-outline),
    1px 1px 0px var(--text-outline),
}
.twoPxOutline {
  text-shadow:   
    /* second layer at 2px */ -2px -2px 0px var(--text-outline),
    -1px -2px 0px var(--text-outline), 0px -2px 0px var(--text-outline),
    1px -2px 0px var(--text-outline), 2px -2px 0px var(--text-outline),
    2px -1px 0px var(--text-outline), 2px 0px 0px var(--text-outline),
    2px 1px 0px var(--text-outline), 2px 2px 0px var(--text-outline),
    1px 2px 0px var(--text-outline), 0px 2px 0px var(--text-outline),
    -1px 2px 0px var(--text-outline), -2px 2px 0px var(--text-outline),
    -2px 1px 0px var(--text-outline), -2px 0px 0px var(--text-outline),
    -2px -1px 0px var(--text-outline);
}

